--- a/0_Intro_PyTorch.ipynb
+++ b/0_Intro_PyTorch.ipynb
@@ -106,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similar to `numpy.ndarray()`, you can create a Tensro with values using `torch.tensor(values)`."
+    "Similar to `numpy.ndarray()`, you can create a Tensor with values using `torch.tensor(values)`."
    ]
   },
   {
